--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
-
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
+        <title>A Simple Calculator</title>
     </head>
     <body>
-        
+        A Simple Calculator
     </body>
 </html>
