--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>A Simple Calculator</title>
     </head>
     <body>
-        A Simple Calculator
+        <div id="container">
+            
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
