--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <div id="container">
-            
+            <div id="calculator">
+
+            </div>
         </div>
         <script src="script.js"></script>
     </body>
