--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
-        <title>A Simple Calculator</title>
-    </head>
-    <body>
-        <div id="container">
-            <div id="calculator">
-                <div id="result">
-                    <div id="history">
-                        <p id="history-value"></p>
-                    </div>
-                    <div id="output">
-                        <p id="output-value"></p>
-                    </div>
-                </div>
-                <div id="keyboard">
-                    <button class="operator" id="clear">C</button>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
+		<title>A simple calculator</title>
+	</head>
+	<body>
+		<div id="container">
+			<div id="calculator">
+				<div id="result">
+					<div id="history">
+						<p id="history-value"></p>
+					</div>
+					<div id="output">
+						<p id="output-value"></p>
+					</div>
+				</div>
+				<div id="keyboard">
+					<button class="operator" id="clear">C</button>
 					<button class="operator" id="backspace">CE</button>
 					<button class="operator" id="%">%</button>
 					<button class="operator" id="/">&#247;</button>
@@ -36,9 +36,9 @@
 					<button class="number" id="0">0</button>
 					<button class="empty" id="empty"></button>
 					<button class="operator" id="=">=</button>
-                </div>
-            </div>
-        </div>
-        <script src="script.js"></script>
-    </body>
+				</div>
+			</div>
+		</div>
+		<script src="script.js"></script>
+	</body>
 </html>
